doc/src/content/docs/en/0.5.x/api/command/lowlevel/change-modulation-bank.mdx
---
title: ChangeModulationBank
description: Switching the Modulation bank
sidebar:
  order: 17
slug: en/0.5.x/api/command/lowlevel/change-modulation-bank
---

import CodeTabs from "@components/CodeTabs.astro";

`ChangeModulationBank` is a low-level command that switches the Modulation bank to be played.

## API

<CodeTabs rust={"ChangeModulationBank {\n    bank,\n    transition_mode,\n};"} python={"ChangeModulationBank(\n    bank=bank,\n    transition_mode=transition_mode,\n)"} csharp={"new ChangeModulationBank(\n    bank: bank,\n    transitionMode: transitionMode\n);"} />

| Field             | Type             | Description             |
| ----------------- | ---------------- | ----------------------- |
| `bank`            | `ModulationBank` | Destination bank        |
| `transition_mode` | `TransitionMode` | Behavior on switching   |

## TransitionMode

|            |              |
| -------------------- | --------------------------        |
| `Immediate`          | Immediate                         |
| `SyncIdx`            | When the playback index next becomes 0 |
| `SysTime(DcSysTime, margin)` | At the specified DC system time (`margin` is optional, see below) |
| `Gpio(GpioIn)`       | Trigger on the specified GPIO input pin |
| `Ext`                | Extended mode (automatically switches to the next bank when playback within the bank finishes) |
| `Later`              | Does not transition (only writes to the bank) |

`SysTime` rejects a time earlier than "now + margin" with a `MISS_TRANSITION_TIME` error, because the FPGA may miss a transition whose time is too close.
The margin defaults to 10 ms.

`Later` means "only write to the bank, do not transition".
Specifying it as the `transition_mode` of `Modulation` / `FociStm` / `PatternStm` writes and configures the bank without sending the trailing bank change.
Specifying it on `ChangeModulationBank` / `ChangePatternBank` themselves, which are the transition commands, is a build-time error.
Because `Later` never transitions, it is also exempt from the `LoopBehavior` combination constraint.

See [GPIO pins](/autd3-sdk/en/0.5.x/hardware/gpio/) for details on `Gpio(GpioIn)`.

When switching to the same bank, the `TransitionMode` and `LoopBehavior` settings have no effect.
For details on bank operation see the [bank switching tutorial](/autd3-sdk/en/0.5.x/getting-started/tutorial/bank/).

## Example

`ChangeModulationBank` is sent after preparing the bank with `WriteModulationBuffer` + `ConfigModulation` to switch the playback target.

<CodeTabs rust={"use autd3_rs::commands::{ChangeModulationBank, ConfigModulation, WriteModulationBuffer};\nuse autd3_rs::geometry::{Autd3, Geometry};\nuse autd3_rs::units::Hz;\nuse autd3_rs::value::{LoopBehavior, ModulationBank, SamplingConfig, TransitionMode};\nuse autd3_rs::{Client, ClientConfig};\nuse autd3_rs_link_nop::Nop;\nuse autd3_rs_modulation::{SineOption, modulation_buffer, sine};\n\nlet geometry = Geometry::new(vec![Autd3::default()]);\nlet client = Client::open(&geometry, Nop, ClientConfig::default()).await?;\n\nlet mut data = modulation_buffer();\nsine(150 * Hz, &SineOption::default(), &mut data)?;\n\nlet bank = ModulationBank::B0;\n\nlet mut builder = client.datagram_builder();\nbuilder.push(WriteModulationBuffer {\n    bank,\n    offset: 0,\n    data: &data,\n});\nbuilder.push(ConfigModulation {\n    bank,\n    config: SamplingConfig::FREQ_4K,\n    size: data.len(),\n    loop_behavior: LoopBehavior::Infinite,\n});\nbuilder.push(ChangeModulationBank {\n    bank,\n    transition_mode: TransitionMode::Immediate,\n});\nlet frames = builder.build()?;\nfor frame in &frames {\n    client.send_checked(frame).await?;\n}\n\nclient.close().await?;"} python={"import asyncio\n\nfrom autd3 import Client, ClientConfig\nfrom autd3.commands import ChangeModulationBank, ConfigModulation, WriteModulationBuffer\nfrom autd3.geometry import Autd3, Geometry\nfrom autd3.units import Hz\nfrom autd3.value import LoopBehavior, ModulationBank, SamplingConfig, TransitionMode\nfrom autd3_link_nop import Nop\nfrom autd3_modulation import SineOption, modulation_buffer, sine\n\n\nasync def main() -> None:\n    geometry = Geometry([Autd3([0.0, 0.0, 0.0], [1.0, 0.0, 0.0, 0.0])])\n    client = await Client.open(geometry, Nop(), ClientConfig())\n\n    data = modulation_buffer()\n    sine(150.0 * Hz, SineOption(), data)\n\n    bank = ModulationBank.B0\n\n    builder = client.datagram_builder()\n    builder.push(\n        WriteModulationBuffer(\n            bank=bank,\n            offset=0,\n            data=data,\n        )\n    )\n    builder.push(\n        ConfigModulation(\n            bank=bank,\n            config=SamplingConfig.FREQ_4K,\n            size=len(data),\n            loop_behavior=LoopBehavior.Infinite,\n        )\n    )\n    builder.push(\n        ChangeModulationBank(\n            bank=bank,\n            transition_mode=TransitionMode.Immediate,\n        )\n    )\n    frames = builder.build()\n    for frame in frames:\n        await client.send_checked(frame)\n\n    await client.close()\n\n\nasyncio.run(main())"} csharp={"using System.Numerics;\nusing System.Threading.Tasks;\nusing AUTD3;\nusing AUTD3.Link;\nusing Nop = AUTD3.Link.Nop;\nusing static AUTD3.Units;\n\nvar geometry = new Geometry(new[] { new Autd3(Vector3.Zero) });\nvar client = await Client.OpenAsync(geometry, new Nop(), new ClientConfig());\n\nvar data = Modulation.ModulationBuffer();\nModulation.Sine(150 * Hz, new SineOption(), data);\n\nvar bank = ModulationBank.B0;\n\nvar builder = client.DatagramBuilder();\nbuilder.Push(new WriteModulationBuffer(\n    bank: bank,\n    offset: 0,\n    data: data\n));\nbuilder.Push(new ConfigModulation(\n    bank: bank,\n    config: SamplingConfig.Freq4k,\n    size: (uint)data.Length,\n    loopBehavior: LoopBehavior.Infinite\n));\nbuilder.Push(new ChangeModulationBank(\n    bank: bank,\n    transitionMode: TransitionMode.Immediate\n));\nvar frames = builder.Build();\nforeach (var frame in frames)\n{\n    await client.SendCheckedAsync(frame);\n}\n\nawait client.CloseAsync();"} />
